[tool.poetry]
name = "pytudes"
version = "0.0.0"
description = "pytudes"
authors = ["Teo Zosa <teo@sonosim.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/TeoZosa/pytudes"
homepage = "https://github.com/TeoZosa/pytudes"
include = ["pytudes/py.typed"]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/TeoZosa/pytudes/releases"

[tool.poetry.dependencies]
python = "^3.9"

# Project-specific
coolname = "^1.1.0"
jupyter = "^1.0.0"
pandas = "^1.2.3"
pydantic = "^1.8"
scikit-learn = "^0.24.2"
scipy = "^1.6.1"

# Documentation
importlib-metadata = "^4.5.0"
myst-parser = { version = "^0.15.1", optional = true}
pygments = { version = "^2.9.0", optional = true}
python-dotenv = "^0.17.1"
sphinx = { version = "^3.5.4", optional = true}
sphinx-autodoc-typehints = { version = "^1.11.1", optional = true}
sphinx-rtd-theme = { version = "^0.5.1", optional = true}
sphinxcontrib-apidoc = { version = "^0.3.0", optional = true}
sphinxcontrib-confluencebuilder = { version = "^1.5.0", optional = true}

[tool.poetry.dev-dependencies]
# Testing
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-emoji = "^0.2.0"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.3.0"
xdoctest = "^0.15.4"
tox = "^3.23.1"
tox-gh-actions = "^2.3.0"
# Code formatter
# see: https://black.readthedocs.io/en/stable/editor_integration.html
black = "^21.5b2"
# Linters
flakehell = "^0.9.0"
pylint = "^2.8.3"
# Static type checker
mypy = "^0.812"
# Linting & formatting orchestrator
pre-commit = "^2.13.0"

# Documentation
darglint = "^1.5.8"

[tool.poetry.extras]
docs = [
    "importlib-metadata",
    "myst-parser",
    "pygments",
    "python-dotenv",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-confluencebuilder",
]

#################################################################################
# Tooling configs                                                               #
#################################################################################
[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true
source = ["pytudes"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 0
show_missing = true
skip_covered = true

[tool.flakehell]
# specify any flake8 options
exclude = [".*"] # Ignore dotfiles
# make output nice
format = "grouped"
# show line of source code in output
show_source = true
# darglint config
strictness="short"

# list of plugins and rules for them
[tool.flakehell.plugins]
# cyclomatic complexity (https://github.com/PyCQA/mccabe)
mccabe = ["+*"]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]
# include everything in pycodestyle except what Black covers
pycodestyle = ["+*",
    "-E203", # Whitespace before ":"
    "-E501", # Line too long (82 > 78 characters)
    "-W503",  # Line break occurred before a binary operator <- this is now considered best practice by PEP 8

    # Break convention for coding problems
    #   given that their purpose and characteristics
    #   distinguish them from typical software engineering programs
    #   (e.g., generally independent modules)
    "-E266", # Too many leading '#' (e.g., salient sub-section headers idiosyncratic to this project)
    "-E731", # Lambda expression assignment; simplifies code formatting for trivial functions/implicitly documents through naming
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 0 # adjust `fail-under` value as quality standards permit
whitelist-regex = []
color = true

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true

[tool.pylint.messages_control]
disable = [
  # Explicitly document only as needed
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  # Black & Flake8 purview
  "line-too-long",
  "bad-continuation",
  "c-extension-no-member",
]

[tool.pylint.similarities]
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.pytest.ini_options]
addopts = ["-rfsxX", "-l", "--tb=short", "--strict-markers", "-vv", "--emoji", "--xdoctest"]
xfail_strict = "true"
testpaths = ["tests",]
norecursedirs = [".*", "*.egg", "build", "dist",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
